--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,4 +4,5 @@
     <color name="text_while">#FAFAFA</color>
     <color name="title_bar_blue">#ff25b7ff</color>
     <color name="text_gray">#ffbababa</color>
+    <color name="text_black">#000000</color>
 </resources>
