--- a/app/src/main/res/layout/list_app_item.xml
+++ b/app/src/main/res/layout/list_app_item.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="60dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+<RelativeLayout
+    android:layout_width="match_parent" android:layout_height="60dp"
+    android:id="@+id/rl_appitem">
 
     <ImageView
         android:layout_width="50dp"
@@ -35,4 +41,51 @@
         android:layout_toEndOf="@+id/iv_icon"
         android:textSize="16dp"
         android:singleLine="true" />
+
+
 </RelativeLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/iv_icon"
+        android:gravity="center_vertical"
+        android:background="#ffdadada"
+        android:visibility="gone"
+        android:id="@+id/ll_app_expand">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="卸载"
+            android:id="@+id/tv_uninstall"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/img1"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="打开"
+            android:id="@+id/tv_open"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/img2"
+            android:gravity="center_vertical" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="分享"
+            android:id="@+id/tv_share"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/img3"
+            android:gravity="center_vertical"
+            android:layout_marginRight="20dp" />
+    </LinearLayout>
+</LinearLayout>
