--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,25 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- 一级标题栏高-->
+    <dimen name="dimen_title_bar_height">48dp</dimen>
+    <!-- 二级标题栏高-->
+    <dimen name="dimen_second_title_bar_height">40dp</dimen>
+    <!-- 一级字体大小-->
+    <dimen name="dimen_level1_text_size">24dp</dimen>
+    <!-- 二级字体大小-->
+    <dimen name="dimen_level2_text_size">16dp</dimen>
+    <!-- 小距离-->
+    <dimen name="dimen_layout_margin_little">5dp</dimen>
+    <!-- 小距离-->
+    <dimen name="dimen_layout_margin_mediu">10dp</dimen>
+    <!-- 大距离-->
+    <dimen name="dimen_layout_margin_large">50dp</dimen>
+    <!-- 分割线高-->
+    <dimen name="dimen_line_height">1dp</dimen>
+    <!-- 底部栏高-->
+    <dimen name="dimen_bottom_bar_height">50dp</dimen>
+    <!-- 按钮高-->
+    <dimen name="dimen_button_height">48dp</dimen>
 </resources>
